GNOME Bugzilla – Bug 723110
The margin in the toolbar is wrong in RTL
Last modified: 2014-01-28 13:59:17 UTC
See the patch.
Created attachment 267320 [details] [review] toolbar: Fix the margin in RTL
Review of attachment 267320 [details] [review]: hmm, could you please use #if GTK_CHECK_VERSION instead of bumping the GTK+ requirements? To avoid too many ifdefs you could add a helper function with a single ifdef inside. Thanks.
Created attachment 267334 [details] [review] toolbar: Fix the margin in RTL Well, this is more an option.
Review of attachment 267334 [details] [review]: Excellent!
Review of attachment 267334 [details] [review]: Pushed as c858776 - toolbar: Fix the margin in RTL