toolbar: Fix the margin in RTL

https://bugzilla.gnome.org/show_bug.cgi?id=723110

Signed-off-by: Yosef Or Boczko <yoseforb@src.gnome.org>